changed logo to png + fixed responsiveness bugs on mobile

--- a/client/src/styles/ApartmentCard.css
+++ b/client/src/styles/ApartmentCard.css
@@ -1,6 +1,6 @@
 
 .card {
-    min-width: 350px;
+    min-width: 330px;
     max-width: 400px;
     flex: 1 0 33%;
     background-color: white;
