--- a/client/src/styles/SearchBar.css
+++ b/client/src/styles/SearchBar.css
@@ -25,7 +25,7 @@
     background-color: white;
     box-shadow: var(--wp--preset--shadow);
     z-index: 10;
-    margin: 3rem auto;
+    margin: 5rem auto;
     position: relative;
 }
 
